Fix readability problem with size of text and imgs

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ button,
 
 .container {
     display: grid;
-    height: 1400px;
+    height: auto;
     min-height: 100vh;
     overflow-x: hidden;
     grid-template: repeat(6, 1fr) 0.1fr / repeat(6, 1fr);
@@ -102,29 +102,28 @@ header {
     border-radius: 15px;
 }
 
+.upper-header > input::-webkit-input-placeholder {
+    font-weight: 400;
+}
+
+.upper-header > input::-moz-placeholder {
+    font-weight: 400;
+}
+
+.upper-header > input:-ms-input-placeholder {
+    font-weight: 400;
+}
+
+.upper-header > input::-ms-input-placeholder {
+    font-weight: 400;
+}
+
+.upper-header > input::placeholder {
+    font-weight: 400;
+    font-size: 15px;
+}
+
 .upper-header > div {
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
-    background-image: url("images/gecko.jpg");
-    background-size: cover;
-    background-position: bottom center;
-}
-
-.upper-header > h1 {
-    width: 130px;
-    font-size: 1.1rem;
-    font-weight: 500;
-}
-
-.lower-header {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 0.8fr 6fr 1fr 1fr 1fr;
-    gap: 20px;
-}
-
-.lower-header > div:nth-of-type(1) {
     width: 60px;
     height: 60px;
     border-radius: 100%;
@@ -133,26 +132,48 @@ header {
     background-position: bottom center;
 }
 
+.upper-header > h1 {
+    width: 130px;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.lower-header {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 0.8fr 10fr 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+.lower-header > div:nth-of-type(1) {
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    background-image: url("images/gecko.jpg");
+    background-size: cover;
+    background-position: bottom center;
+}
+
 .lower-header h2 {
-    font-size: 0.9rem;
+    font-size: 1.1rem;
     font-weight: 500;
     color: rgba(0, 0, 0, 0.7);
 }
 
 .lower-header h1 {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 500;
 }
 
 .lower-header > button {
-    width: 90px;
-    height: 35px;
+    width: 80px;
+    height: 40px;
     border: 0;
     border-radius: 15px;
-    background: #84d6ff;
+    background: rgb(158, 223, 255);
     color: rgba(0, 0, 0, 0.7);
-    font-size: 0.9rem;
-    font-weight: 500;
+    font-size: 1rem;
+    font-weight: 600;
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s;
 }
@@ -164,7 +185,7 @@ header {
 .b-sidebar {
     display: grid;
     min-width: 190px;
-    background: #84d6ff;
+    background: rgb(158, 223, 255);
     grid-area: b-sidebar;
     grid-template-rows: 0.5fr 30px repeat(18, minmax(30px, 0.5fr));
     transition: opacity 0.3s;
@@ -191,13 +212,12 @@ header {
     padding: 5px 0px;
 }
 
-.b-sidebar > div > img,
 .b-sidebar > div > h1 {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
 }
 
 .b-sidebar > div > img {
-    height: 20px;
+    height: 30px;
     margin: 0px 20px;
     grid-area: img;
 }
@@ -210,11 +230,11 @@ header {
 }
 
 .b-sidebar > div > h2 {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 .b-sidebar .icon-dashboard {
-    height: 40px;
+    height: 50px;
     margin: 0px 10px;
 }
 
@@ -250,27 +270,33 @@ header {
 }
 
 .project h2 {
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 500;
 }
 
 .project > p {
     width: auto;
-    font-size: 0.95rem;
+    font-size: 1.1rem;
     color: rgba(128, 128, 128, 0.9);
 }
 
 .project .b-buttons {
     display: grid;
     width: 100px;
-    margin: 0px 10px 0px auto;
+    margin: 10px 30px 0px auto;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
 
-.project .b-buttons > img,
-.upper-header > .icon-notifications {
-    height: 22px;
+.upper-header > .icon-notifications,
+.upper-header > img:nth-of-type(2) {
+    height: 30px;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.project .b-buttons > img {
+    height: 30px;
     cursor: pointer;
     transition: transform 0.3s;
 }
@@ -282,7 +308,7 @@ header {
 
 .left-content > h1,
 .right-content > h1 {
-    font-size: 18px;
+    font-size: 1.2rem;
     font-weight: 500;
     grid-column: 1 / 3;
 }
@@ -311,14 +337,14 @@ header {
 }
 
 .right-content > .b-announcements h2 {
-    margin-bottom: 3px;
-    font-size: 0.85rem;
+    margin-bottom: 5px;
+    font-size: 1rem;
     font-weight: 500;
 }
 
 .right-content > .b-announcements p {
     width: auto;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     color: rgba(128, 128, 128, 0.9);
 }
 
@@ -335,11 +361,11 @@ header {
 }
 
 .right-content > .b-trending span {
-    font-size: 0.9rem;
+    font-size: 1.1rem;
 }
 
 .right-content > .b-trending p {
-    font-size: 0.9rem;
+    font-size: 1rem;
     color: gray;
 }
 
@@ -351,8 +377,8 @@ header {
 .profile-cat,
 .profile-dog,
 .profile-elephant {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     border-radius: 100%;
     cursor: pointer;
     background-size: cover;
@@ -391,7 +417,7 @@ footer {
     grid-area: footer;
 }
 
-@media (max-width: 1132px) {
+@media (max-width: 1284px) {
     .upper-header .icon-navbar {
         height: 40px;
     }
@@ -469,7 +495,6 @@ footer {
     }
 
     .container {
-        height: 2200px;
         grid-template-areas:
             "header header header header header header"
             "b-content b-content b-content b-content b-content b-content"
@@ -529,17 +554,13 @@ footer {
 }
 
 @media (max-width: 942px) {
-    .navbar-visible > div:nth-of-type(1) {
-        margin: 10px 10px 0px 5vw;
-    }
-
     .navbar-visible > div:nth-of-type(1) h1 {
         font-size: 1.2rem;
     }
 
     .navbar-visible > div:nth-of-type(1) img {
-        margin-left: 15px;
         height: 40px;
+        margin-left: 8px;
     }
 
     .navbar-visible > .sidebar-link > h2 {
@@ -549,10 +570,6 @@ footer {
 
     .navbar-visible {
         width: 50vw;
-    }
-
-    .navbar-visible > .sidebar-link {
-        margin: 10px 5vw;
     }
 
     .b-content {
@@ -565,7 +582,7 @@ footer {
             "header header header header header header"
             "b-content b-content b-content b-content b-content b-content"
             "footer footer footer footer footer footer";
-        grid-template-rows: 1fr 20fr 1fr;
+        grid-template-rows: 1fr 20fr 0.1fr;
     }
 
     .left-content {
